--- a/plugin.ini
+++ b/plugin.ini
@@ -4,7 +4,7 @@
 ## Author / Copyright notice
 author=Sayantan Santra
 
-description=Export directly as unruled PDF with alt+e
+description=Export directly as unruled PDF using Alt+E
 
 ## If the plugin is packed with Xournal++, use
 ## <xournalpp> then it gets the same version number
